# rust-cohort

./: .gitignore  README.md  wins.md
gists/cargo-doc/: README-cargo-doc.md
gists/makefile/: Makefile  README-makefile.md
gists/pre-commit-hook/: README-pre-commit-hook.md
rust-json-parser/: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
rust-json-parser/benchmarks/: generate.py  large.json  medium.json  nested.json  results.md  small.json  xlarge.json
rust-json-parser/python/: README.md
rust-json-parser/python/rust_json_parser/: __init__.py  __main__.py  _rust_json_parser.pyi
rust-json-parser/src/: README.md  error.rs  lib.rs  main.rs  parser.rs  python_bindings.rs  tokenizer.rs  value.rs
rust-json-parser/tests/: test_python_integration.py
test_data/: test_data_2.json
