[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-json-parser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["simplejson>=3.19.0"]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=9.0",
    "ruff>=0.11",
    "ty>=0.0.1a1",
]

[tool.maturin]
python-source = "python"
module-name = "rust_json_parser._rust_json_parser"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["rust_json_parser"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"
